Improved trigger management

--- a/trunk/server/damagecontrol/scm/cvs_configure_form.erb
+++ b/trunk/server/damagecontrol/scm/cvs_configure_form.erb
@@ -16,6 +16,12 @@
     </td>
   </tr>
   <tr>
+    <td>&nbsp;</td>
+    <td class="setting-description">
+      If you specify :local: DamageControl can create the repository for you after you save (unless the repository already exists).
+    </td>
+  </tr>
+  <tr>
     <td>User name</td>
     <td><input class="setting-input" id="cvsuser" onKeyUp="updateCvsRootField()" type="text"></td>
   </tr>
