--- a/trunk/server/damagecontrol/scm/svn_configure_form.erb
+++ b/trunk/server/damagecontrol/scm/svn_configure_form.erb
@@ -5,6 +5,13 @@
     <td width="75%"><input class="setting-input" name="svnurl" id="svnurl" type="text" value="<%= svnurl %>"></td>
   </tr>
   <tr>
+    <td>&nbsp;</td>
+    <td class="setting-description">
+      If you specify a local URL (starting with file://) DamageControl can create the repository for you after you save (unless the repository already exists).<br>
+      On Windows, file URLs must look like file:///C:/jupiter/mars
+    </td>
+  </tr>
+  <tr>
     <td class="config_cell">Directory</td>
     <td><input class="setting-input" name="svnpath" id="svnpath" type="text" value="<%= svnpath %>"></td>
   </tr>
