--- a/trunk/server/damagecontrol/web/trigger_installed.erb
+++ b/trunk/server/damagecontrol/web/trigger_installed.erb
@@ -13,21 +13,16 @@
     <p>
       This is the command that is used to trig a build:
       <pre>
-        <%= scm.trigger_command(damagecontrol_install_dir, project_name, @trig_xmlrpc_url).inspect %>
+        <%= trigger_command.inspect %>
       </pre>
-    </p>
-    
-    <p>
-      The trigger installation mechanism can sometimes malfunction in tricky situations, double-check by
-      inspecting the content of your loginfo file:
-      <a href="root/<%= project_name %>/checkout/CVSROOT/loginfo">here</a> and verify that it has been committed.
     </p>
     
   <% else %>
   
-    Could not install trigger:
+    Trigger installation failed.
     <pre>
-    <%= format_exception(error) %>
+    <%= error.message %>
+    <%= error.backtrace.join("\n") %>
     </pre>
     
   <% end %>
