decouple trigger and poller from checkoutmanager using polling.

--- a/trunk/server/damagecontrol/scm/svn_configure_form.erb
+++ b/trunk/server/damagecontrol/scm/svn_configure_form.erb
@@ -8,6 +8,8 @@
     <td>&nbsp;</td>
     <td class="setting-description">
       If you specify a local URL (starting with file://) DamageControl can create the repository for you after you save (unless the repository already exists).<br>
+      Using a file:// URL will also give you the option to have DamageControl install a trigger in Subversion,
+      so that you don't have to use polling to detect changes.<br>
       On Windows, file URLs must look like file:///C:/jupiter/mars
     </td>
   </tr>
