quick fix for empty project name

--- a/trunk/server/damagecontrol/web/configure.erb
+++ b/trunk/server/damagecontrol/web/configure.erb
@@ -37,7 +37,7 @@ function showScm(scm) {
 <tr>
   <td class="setting-name">Project name</td>
   <td width="75%">
-    <% if project_exists? %>
+    <% if nil %>
       <%= project_name %>
       <input name="project_name" type="hidden" value="<%= project_name %>"/>
     <% else %>
