Upgraded timestamp usage

--- a/trunk/server/damagecontrol/web/build_details.erb
+++ b/trunk/server/damagecontrol/web/build_details.erb
@@ -4,7 +4,7 @@
 </head>
 <body>
 
-<h1 class="pane"><img src="images/timestampstatus?project_name=<%= project_name %>&timestamp=<%= selected_build.timestamp %>" width="32" height="32" border="0" /> <%= build_description(selected_build) %></h1>
+<h1 class="pane"><img src="images/timestampstatus?project_name=<%= project_name %>&timestamp=<%= selected_build.dc_creation_time %>" width="32" height="32" border="0" /> <%= build_description(selected_build) %></h1>
 
 <div style="padding-top: 5px">
 <ul id="foldertab">
@@ -12,7 +12,7 @@
       selected = selected_report == report
       %>
       <% if report.available? %>
-    <li><a href="?project_name=<%= project_name %>&timestamp=<%= selected_build.timestamp %>&report=<%= report.id %>" 
+    <li><a href="?project_name=<%= project_name %>&dc_creation_time=<%= selected_build.dc_creation_time.ymdHMS %>&report=<%= report.id %>" 
     <% if selected then %>id="current"<% end %>>
 	<image src="<%= report.icon %>"/> <%= report.title %>
 	</a></li>
