--- a/trunk/server/damagecontrol/web/components/build_scheduler_status.erb
+++ b/trunk/server/damagecontrol/web/components/build_scheduler_status.erb
@@ -19,7 +19,7 @@
     %>
       <tr>
         <td class="pane"><a href="project?project_name=<%= build.project_name %>"><%= build.project_name %></a></td>
-        <td class="pane"><%= build.timestamp_for_humans %></td>
+        <td class="pane"><%= build.dc_creation_time.to_human %></td>
       </tr>
     <% end %>
   <% end %>
