--- a/trunk/server/damagecontrol/web/components/search_form.erb
+++ b/trunk/server/damagecontrol/web/components/search_form.erb
@@ -1,8 +1,6 @@
-<form action="search"><div id="searchform">
+<form action="../search/<%= project_name %>"><div id="searchform">
   <img width="24" height="24" src="largeicons/find.png"/> 
   <b>Search <%= project_name %>:</b>
   <input name="search" size="12" value="<%= request.query['search'] %>"/>
   <input type="submit" value="Go"/> &nbsp;
-
-  <input name="project_name" value="<%= project_name %>" type="hidden"/>
 </form></div>
