Aks for the location of the damagecontrol server (Fixes DC-212) Uses ExternalWebUrl to calculate a better 'sensible default'

--- a/trunk/server/damagecontrol/web/trigger_install.erb
+++ b/trunk/server/damagecontrol/web/trigger_install.erb
@@ -29,6 +29,11 @@
           Specify the directory on the source control server where the DamageControl distribution was installed:<br/>
           <input size="50" type="input" name="damagecontrol_install_dir" value="<%= damagecontrol_install_dir %>" />
         </li>
+        <li>
+          <b>Specify DamageControl XML-RPC URL</b><br/>
+          Specify the URL of the DamageControl XML-RPC endpoint. In most cases the default value should left unchanged:<br/>
+          <input size="50" type="input" name="damagecontrol_xmlrpc_url" value="<%= damagecontrol_xmlrpc_url %>" />
+        </li>
       <% if install %>
         <li>
           <b>Install it</b><br/>
