Work on DC-213 - reorganising build folders

--- a/trunk/server/damagecontrol/web/build_details.erb
+++ b/trunk/server/damagecontrol/web/build_details.erb
@@ -6,7 +6,7 @@
 
 <h1 class="pane">
 	<img 
-		src="../images/timestampstatus/<%= project_name %>?timestamp=<%= selected_build.dc_creation_time.ymdHMS %>" 
+		src="../images/timestampstatus/<%= project_name %>?dc_creation_time=<%= selected_build.dc_creation_time.ymdHMS %>" 
 		width="32" 
 		height="32" 
 		border="0" /> <%= build_description(selected_build) %>
