--- a/trunk/server/damagecontrol/web/configure.erb
+++ b/trunk/server/damagecontrol/web/configure.erb
@@ -6,6 +6,19 @@
 <body onLoad="executeOnLoad()">
 <script><!--
 
+tabs = ["scm_tab", "general_tab", "tracker_tab"]
+
+function showTab(id) {
+	for(tab in tabs) {
+		tab = tabs[tab]
+		style = "none"
+		if(id == tab) {
+			style = "block"
+		}
+		document.getElementById(tab).style.display = style
+	}
+}
+
 function executeOnLoad() {  
   <% scm_configurators.each do |scm_configurator| %>
     <%= scm_configurator.javascript_on_load %>
@@ -58,7 +71,15 @@ function configureAction() {
 // -->
 </script>
 
+<ul id="foldertab">
+    <li><a href="javascript:showTab('general_tab')">General</a></li>
+    <li><a href="javascript:showTab('scm_tab')">Source Control</a></li>
+    <li><a href="javascript:showTab('tracker_tab')">Issue Tracker</a></li>
+</ul>
+
 <form onsubmit="configureAction();" id="configform">
+
+<div id="general_tab" style="display:block">
 <table width="100%">
 <tr>
   <td class="setting-name">Project name</td>
@@ -91,18 +112,6 @@ function configureAction() {
     Several email addresses can be specified here, separated by a comma or a space charatcter.
   </td>
 </tr>
-<!--
-<tr>
-  <td class="setting-name">JIRA url</td>
-  <td><input class="setting-input" name="jira_url" id="jira_url" type="text" value="<%= project_config['jira_url'] %>"/></td>
-</tr>
-<tr>
-  <td>&nbsp;</td>
-  <td class="setting-description">
-    The JIRA URL is the URL to the JIRA installation. (And not the URL to the JIRA project).
-  </td>
-</tr>
--->
 <tr>
   <td>ViewCVS/Fisheye URL</td>
   <td><input class="setting-input" name="scm_web_url" id="scm_web_url" type="text" value="<%= project_config['scm_web_url'] %>"></td>
@@ -194,7 +203,11 @@ function configureAction() {
     For example, if your DC server is in Minneapolis and you want to trigger a build at 2:00 AM CST every morning, then you should specify 08:00.  Note that UTC does not adjust for Daylight Savings Time.
   </td>
 </tr>
+</table>
+</div>
 
+<div id="scm_tab" style="display:none">
+<table width="100%">
 <tr>
   <td>Source control</td>
   <td>
@@ -207,7 +220,18 @@ function configureAction() {
     <% end %>
   </td>
 </tr>
+</table>
 
+  <% scm_configurators.each do |scm_configurator| %>
+    <div id="<%= scm_configurator.scm_id %>" style="<% if(scm_configurator.selected?)%>display:block<%else%>display:none<%end%>">
+      <%= scm_configurator.config_form %>
+    </div>
+  <% end %>
+	
+</div>
+
+<div id="tracker_tab" style="display:none">
+<table width="100%">
 <tr>
   <td>Issue Tracking</td>
   <td>
@@ -223,17 +247,12 @@ function configureAction() {
 </tr>
 </table>
 
-  <% scm_configurators.each do |scm_configurator| %>
-    <div id="<%= scm_configurator.scm_id %>" style="<% if(scm_configurator.selected?)%>display:block<%else%>display:none<%end%>">
-      <%= scm_configurator.config_form %>
-    </div>
-  <% end %>
-	
-	<% tracking_configurators.each do |tracking_configurator| %>
+  <% tracking_configurators.each do |tracking_configurator| %>
     <div id="<%= tracking_configurator.tracking_id %>" style="<% if(tracking_configurator.selected?)%>display:block<%else%>display:none<%end%>">
       <%= tracking_configurator.config_form %>
     </div>
   <% end %>
+</div>
 
   <input name="action" type="hidden" value="<%= action %>" />
   <input type="submit" value="Save"/>
