Fixed some typos

--- a/trunk/server/damagecontrol/scm/scarab_configure_form.erb
+++ b/trunk/server/damagecontrol/scm/scarab_configure_form.erb
@@ -7,7 +7,7 @@
   <tr>
     <td>&nbsp;</td>
     <td class="setting-description">
-      Enter the URL of the Scarab installation here, not of the specific Jira module
+      Enter the URL of the Scarab installation here.
     </td>
   </tr>
 	<tr>
