--- a/trunk/server/damagecontrol/web/build_details.erb
+++ b/trunk/server/damagecontrol/web/build_details.erb
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title><%= project_name %> build</title>
+<title><%= project_name %></title>
 </head>
 <body>
 
@@ -9,8 +9,19 @@
 		src="../images/timestampstatus/<%= project_name %>?dc_creation_time=<%= selected_build.dc_creation_time.ymdHMS %>" 
 		width="32" 
 		height="32" 
-		border="0" /> <%= build_description(selected_build) %>
+		border="0" /> <%= project_title %> - <%= build_description(selected_build) %>
 </h1>
+
+<% if(project_config["scm_web_url"]) %>
+  <a href="#{project_config['scm_web_url']}"><img src="largeicons/safe.png"></a>
+  <a href="#{project_config['scm_web_url']}">#{project_config['scm'].name}</a>
+<% end %>
+
+<% if(project_config["tracking"]) %>
+  <a href="#{project_config['tracking'].url}"><img src="largeicons/scroll_information.png"></a>
+  <a href="#{project_config['tracking'].url}">#{project_config['tracking'].name}</a>
+<% end %>
+
 <div style="padding-top: 5px">
 <ul id="foldertab">
     <% reports.each do |report| 
