add url to notracker and better viewcvs description

--- a/trunk/server/damagecontrol/web/configure.erb
+++ b/trunk/server/damagecontrol/web/configure.erb
@@ -123,7 +123,7 @@ function configureAction() {
 <tr>
   <td>&nbsp;</td>
   <td class="setting-description">
-    The base url to ViewCVS or Fisheye. For example: <tt>http://cvs.damagecontrol.codehaus.org/</tt>.
+    The url to the root of the project in ViewCVS or Fisheye. For example: <tt>http://svn.cargo.codehaus.org/cargo/trunk/</tt>.
   </td>
 </tr>
 
