remove newlines - works differently on linux and windows

--- a/trunk/server/damagecontrol/template/short_html_build_result.erb
+++ b/trunk/server/damagecontrol/template/short_html_build_result.erb
@@ -1,13 +1,7 @@
-<% 
-to_blame = []
+<% to_blame = []
 if(!build.successful?)
   build.changesets.each do |changeset|
     to_blame << changeset.developer unless to_blame.index(changeset.developer)
   end
 end
-
-if(!to_blame.empty?)
-%>
-<%= to_blame.join(", ") %> broke the build <br>
-<% end %>
-<a href="<%=build.url%>">[<%=build.project_name%>] BUILD <%=build.status%></a><br>
+if(!to_blame.empty?) %><%= to_blame.join(", ") %> broke the build <br><% end %><a href="<%=build.url%>">[<%=build.project_name%>] BUILD <%=build.status%></a><br>
