Fixed DC-315. Needed this to do other things.

--- a/trunk/server/damagecontrol/web/configure.erb
+++ b/trunk/server/damagecontrol/web/configure.erb
@@ -55,11 +55,11 @@ function showTracker(tracker) {
 }
 
 function configureAction() {
-	//alert(document.forms[1].elements[0].value)
+	alert(document.forms[0].elements[0].value)
 	if (window.location.href.indexOf("/configure/")!=-1) {
-		document.forms[1].action=document.forms[1].elements[0].value;
+		document.forms[0].action=document.forms[0].elements[0].value;
 	} else {
-		document.forms[1].action="configure/" + document.forms[1].elements[0].value;
+		document.forms[0].action="configure/" + document.forms[0].elements[0].value;
 	}
 }
 
