Reduced JavaScript verbosity

--- a/trunk/server/damagecontrol/web/configure.erb
+++ b/trunk/server/damagecontrol/web/configure.erb
@@ -55,7 +55,7 @@ function showTracker(tracker) {
 }
 
 function configureAction() {
-	alert(document.forms[0].elements[0].value)
+	//alert(document.forms[0].elements[0].value)
 	if (window.location.href.indexOf("/configure/")!=-1) {
 		document.forms[0].action=document.forms[0].elements[0].value;
 	} else {
