--- a/trunk/server/damagecontrol/web/components/project_status.erb
+++ b/trunk/server/damagecontrol/web/components/project_status.erb
@@ -1,9 +1,9 @@
 <table id="projectstatus" class="pane">
 <tr>
     <th>&nbsp;</th>
-    <th>Project</th>
-    <th>Last Success</th>
-    <th>Last Duration</th>
+    <th align="left">Project</th>
+    <th align="left">Last Successful Build</th>
+    <th align="left">Duration of Last Build</th>
     <th>&nbsp;</th>
 </tr>
 
