--- a/trunk/server/damagecontrol/scm/rubyforge_configure_form.erb
+++ b/trunk/server/damagecontrol/scm/rubyforge_configure_form.erb
@@ -1,4 +1,4 @@
-<img src="images/sourceforge.gif"/>
+<img src="images/rubyforge.png"/>
 <table width="100%">
   <tr>
     <td class="setting-name">Project ID</td>
@@ -7,10 +7,10 @@
   <tr>
     <td>&nbsp;</td>
     <td class="setting-description">
-      Enter the ID of your SourceForge.net project here (group_id)
+      Enter the ID of your RubyForge.net project here (group_id)
     </td>
   </tr>
-	<tr>
+  <tr>
     <td class="setting-name">Tracker ID</td>
     <td width="75%"><input class="setting-input" name="tracker_id" id="tracker_id" maxlen="4" type="text" value="<%= tracker_id %>"></td>
   </tr>
@@ -18,7 +18,7 @@
     <td>&nbsp;</td>
     <td class="setting-description">
       Enter the module ID of the tracker here. If you open a bug in the tracker
-      enter the value of the URL parameter <strong>atid</strong> here. Example: <tt>http://sourceforge.net/tracker/index.php?func=detail&amp;aid=<strong>1051927</strong>&amp;group_id=7856&amp;atid=107856</tt>.
+      enter the value of the URL parameter <strong>atid</strong> here. Example: <tt>http://rubyforge.org/tracker/index.php?func=detail&amp;aid=<strong>1120</strong>&amp;group_id=426&amp;atid=1698</tt>.
     </td>
   </tr>
 </table>
