fix some nullpointers and improve scm label handling

--- a/trunk/server/damagecontrol/web/configure.erb
+++ b/trunk/server/damagecontrol/web/configure.erb
@@ -133,7 +133,7 @@ function configureAction() {
   <td>&nbsp;</td>
   <td class="setting-description">
     The number that the next build will have. If you already have a number of labelled builds before you can override this here.
-    If your SCM supports native labels (such as Subversion's repository-wide revision numbers) - you can leave this field empty
+    If your SCM supports native labels (such as Subversion's repository-wide revision numbers) - you can enter -1
     in order to let your builds get the label from the SCM.
   </td>
 </tr>
