fix attribute names

--- a/damagecontrol/trunk/lib/damagecontrol/scm/sourceforge_configure_form.erb
+++ b/damagecontrol/trunk/lib/damagecontrol/scm/sourceforge_configure_form.erb
@@ -2,7 +2,7 @@
 <table width="100%">
   <tr>
     <td class="setting-name">Project ID</td>
-    <td width="75%"><input class="setting-input" name="group_id" id="group_id" type="text" value="<%= group_id %>"></td>
+    <td width="75%"><input class="setting-input" name="sf_group_id" id="sf_group_id" type="text" value="<%= sf_group_id %>"></td>
   </tr>
   <tr>
     <td>&nbsp;</td>
@@ -12,7 +12,7 @@
   </tr>
 	<tr>
     <td class="setting-name">Tracker ID</td>
-    <td width="75%"><input class="setting-input" name="tracker_id" id="tracker_id" maxlen="4" type="text" value="<%= tracker_id %>"></td>
+    <td width="75%"><input class="setting-input" name="sf_tracker_id" id="sf_tracker_id" maxlen="4" type="text" value="<%= sf_tracker_id %>"></td>
   </tr>
   <tr>
     <td>&nbsp;</td>
