--- a/damagecontrol/trunk/lib/damagecontrol/scm/scarab_configure_form.erb
+++ b/damagecontrol/trunk/lib/damagecontrol/scm/scarab_configure_form.erb
@@ -12,7 +12,7 @@
   </tr>
 	<tr>
     <td class="setting-name">Scarab Module</td>
-    <td width="75%"><input class="setting-input" name="module_key" id="module_key" maxlen="4" type="text" value="<%=  module_key %>"></td>
+    <td width="75%"><input class="setting-input" name="scarab_module_key" id="scarab_module_key" maxlen="4" type="text" value="<%= scarab_module_key %>"></td>
   </tr>
   <tr>
     <td>&nbsp;</td>
