better rails support

--- a/rscm/trunk/app/views/scms/Subversion_form.rhtml
+++ b/rscm/trunk/app/views/scms/Subversion_form.rhtml
@@ -2,7 +2,7 @@
 <table width="100%">
   <tr>
     <td class="config_cell">Url</td>
-    <td width="75%"><input class="setting-input" name="svnurl" id="svnurl" type="text" value="<%= svnurl %>"></td>
+    <td width="75%"><input class="setting-input" name="RSCM::SVN[url]" type="text" value="<%= 'url' %>"></td>
   </tr>
   <tr>
     <td>&nbsp;</td>
@@ -15,7 +15,7 @@
   </tr>
   <tr>
     <td class="config_cell">Directory</td>
-    <td><input class="setting-input" name="svnpath" id="svnpath" type="text" value="<%= svnpath %>"></td>
+    <td><input class="setting-input" name="RSCM::SVN[path]" type="text" value="<%= 'path' %>"></td>
   </tr>
   <tr>
     <td>&nbsp;</td>
