--- a/rscm/trunk/app/views/admin/project.rhtml
+++ b/rscm/trunk/app/views/admin/project.rhtml
@@ -9,17 +9,17 @@
 tabs = ["scm_tab", "general_tab", "tracker_tab"]
 
 function showTab(id) {
-	for(tab in tabs) {
-		tab = tabs[tab]
-		style = "none"
-		if(id == tab) {
-			style = "block"
-		}
-		document.getElementById(tab).style.display = style
-	}
+  for(tab in tabs) {
+    tab = tabs[tab]
+    style = "none"
+    if(id == tab) {
+      style = "block"
+    }
+    document.getElementById(tab).style.display = style
+  }
 }
 
-function executeOnLoad() {  
+function executeOnLoad() {
   <% @scms.each do |scm| %>
     <%= scm.javascript_on_load %>
   <% end %>
@@ -27,28 +27,28 @@ function executeOnLoad() {
 
 scmconfigurators = [
 <% @scms.each do |scm| %>
-	"<%=scm.class.name %>",
+  "<%=scm.class.name %>",
 <% end %> "" ];
 
 function showScm(scm) {
-	for (i=0;i<scmconfigurators.length-1;i++) {
-		oldTrackerDiv = document.getElementById(scmconfigurators[i]);
-		oldTrackerDiv.style.display = 'none'
-	}
+  for (i=0;i<scmconfigurators.length-1;i++) {
+    oldTrackerDiv = document.getElementById(scmconfigurators[i]);
+    oldTrackerDiv.style.display = 'none'
+  }
   newTrackerDiv = document.getElementById(scm);
   newTrackerDiv.style.display = 'block';
 }
 
 trackingconfigurators = [
 <% @tracking_configurators.each do |tracking_configurator| %>
-	"<%=tracking_configurator.tracking_id %>",
+  "<%=tracking_configurator.tracking_id %>",
 <% end %> "" ];
 
 function showTracker(tracker) {
-	for (i=0;i<trackingconfigurators.length-1;i++) {
-		oldTrackerDiv = document.getElementById(trackingconfigurators[i]);
-		oldTrackerDiv.style.display = 'none'
-	}
+  for (i=0;i<trackingconfigurators.length-1;i++) {
+    oldTrackerDiv = document.getElementById(trackingconfigurators[i]);
+    oldTrackerDiv.style.display = 'none'
+  }
   newTrackerDiv = document.getElementById(tracker);
   newTrackerDiv.style.display = 'block';
 }
@@ -75,9 +75,9 @@ function showTracker(tracker) {
   <td width="75%">
     <% if nil %>
       <%= @project_name %>
-      <input name="@project_name" type="hidden" value="<%= @project_name %>"/>
+      <input name="project[name]" type="hidden" value="<%= @project_name %>"/>
     <% else %>
-      <input class="setting-input" name="@project_name" type="text" value="<%= @project_name %>"/>
+      <input class="setting-input" name="project[name]" type="text" value="<%= @project_name %>"/>
     <% end %>
   </td>
 </tr>
@@ -131,10 +131,10 @@ function showTracker(tracker) {
 
   <% @scms.each do |scm| %>
     <div id="<%= scm.class.name %>" style="<% if(scm.selected?)%>display:block<%else%>display:none<%end%>">
-      <%= scm.config_form %>
+      <%= @config_forms[scm] %>
     </div>
   <% end %>
-	
+  
 </div>
 
 <div id="tracker_tab" style="display:none">
@@ -150,7 +150,7 @@ to any issues related to the commits that went into the build.
   type="radio" value="<%= tracking_configurator.tracking_id %>" 
   name="tracking_id" 
   onClick="javascript:showTracker('<%= tracking_configurator.tracking_id %>')"<% if(tracking_configurator.selected?) %>checked="true"<%end%>/>
-			<%= tracking_configurator.tracking_display_name %>
+      <%= tracking_configurator.tracking_display_name %>
     <% end %>
   </td>
 </tr>
