rails rails rails

--- a/rscm/trunk/app/views/layouts/rscm.rhtml
+++ b/rscm/trunk/app/views/layouts/rscm.rhtml
@@ -3,6 +3,6 @@
 <title>RSCM</title>
 <link type="text/css" rel="stylesheet" href="/stylesheets/style.css">
 </head>
-<body>
+<body onLoad="executeOnLoad()">
 <%= @content_for_layout %>
 </body></html>
