--- a/rscm/trunk/app/views/project/_jira.rhtml
+++ b/rscm/trunk/app/views/project/_jira.rhtml
@@ -2,7 +2,7 @@
 <table width="100%">
   <tr>
     <td class="setting-name">Base URL</td>
-    <td width="75%"><input class="setting-input" name="RSCM::Tracker::JIRA[baseurl]" type="text" value="<%= self.baseurl %>"></td>
+    <td width="75%"><input class="setting-input" name="RSCM::Tracker::JIRA[baseurl]" type="text" value="<%= jira.baseurl %>"></td>
   </tr>
   <tr>
     <td>&nbsp;</td>
@@ -12,7 +12,7 @@
   </tr>
   <tr>
     <td class="setting-name">Project id</td>
-    <td width="75%"><input class="setting-input" name="RSCM::Tracker::JIRA[project_id]" type="text" value="<%= self.project_id %>"></td>
+    <td width="75%"><input class="setting-input" name="RSCM::Tracker::JIRA[project_id]" type="text" value="<%= jira.project_id %>"></td>
   </tr>
   <tr>
     <td>&nbsp;</td>
