--- a/rscm/trunk/app/views/project/_scarab.rhtml
+++ b/rscm/trunk/app/views/project/_scarab.rhtml
@@ -2,7 +2,7 @@
 <table width="100%">
   <tr>
     <td class="setting-name">Scarab Base URL</td>
-    <td width="75%"><input class="setting-input" name="RSCM::Tracker::Scarab[baseurl]" type="text" value="<%= self.baseurl %>"></td>
+    <td width="75%"><input class="setting-input" name="RSCM::Tracker::Scarab[baseurl]" type="text" value="<%= scarab.baseurl %>"></td>
   </tr>
   <tr>
     <td>&nbsp;</td>
@@ -12,7 +12,7 @@
   </tr>
   <tr>
     <td class="setting-name">Scarab Module</td>
-    <td width="75%"><input class="setting-input" name="RSCM::Tracker::Scarab[module_key]" maxlen="4" type="text" value="<%= self.module_key %>"></td>
+    <td width="75%"><input class="setting-input" name="RSCM::Tracker::Scarab[module_key]" maxlen="4" type="text" value="<%= scarab.module_key %>"></td>
   </tr>
   <tr>
     <td>&nbsp;</td>
