--- a/rscm/trunk/app/views/project/_cvs.rhtml
+++ b/rscm/trunk/app/views/project/_cvs.rhtml
@@ -1,3 +1,4 @@
+<script>
 cvs_port   = new RegExp("^:([^:]*):(.*)@([^:]*):([0-9]*):([a-zA-Z]?.*)")
 cvs_noport = new RegExp("^:([^:]*):(.*)@([^:]*):([a-zA-Z]?.*)")
 cvs_local  = new RegExp("^:(local):(.*)")
@@ -101,3 +102,74 @@ function enableOrDisableCvsFields() {
 		document.getElementById('cvsport').disabled = false
 	}
 }
+</script>
+
+<img src="images/cvs.png"/>
+<table width="100%">
+  <tr>
+    <td class="setting-name">CVSROOT</td>
+    <td width="75%"><input class="setting-input" name="RSCM::CVS[root]" id="cvsroot" onKeyUp="distributeCvsrootFields()" type="text" value="<%= cvs.root %>"></td>
+  </tr>
+  <tr>
+    <td>Protocol</td>
+    <td>
+      <select class="setting-input" id="cvsprotocol" onchange="updateCvsRootField()">
+        <option value=""></option>
+        <option value="ext" selected>Secure shell (:ext:)</option>
+        <option value="pserver">Password server (:pserver:)</option>
+        <option value="local">Locally mounted folder (:local:)</option>
+      </select>
+    </td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+    <td class="setting-description">
+      If you specify :local: DamageControl can create the repository for you after you save (unless the repository already exists).
+    </td>
+  </tr>
+  <tr>
+    <td>User name</td>
+    <td><input class="setting-input" id="cvsuser" onKeyUp="updateCvsRootField()" type="text"></td>
+  </tr>
+  <tr>
+    <td>Password</td>
+    <td><input class="setting-input" name="RSCM::CVS[password]" id="cvspassword" value="<%= cvs.password %>" type="password"></td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+    <td class="setting-description">
+      <b>Warning!</b> Password will be shown in cleartext in configuration files.
+    </td>
+  </tr>
+  <tr>
+    <td>Server</td>
+    <td><input class="setting-input" id="cvsserver" onKeyUp="updateCvsRootField()" type="text"></td>
+  </tr>
+  <tr>
+    <td>Port</td>
+    <td><input class="setting-input" id="cvsport" onKeyUp="updateCvsRootField()" type="text"></td>
+  </tr>
+  <tr>
+    <td>Repository directory</td>
+    <td><input class="setting-input" id="cvsrepodir" onKeyUp="updateCvsRootField()" type="text"></td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+  </tr>
+  <tr>
+    <td>Module</td>
+    <td><input class="setting-input" name="RSCM::CVS[mod]" id="cvsmodule" type="text" value="<%= cvs.mod %>"></td>
+  </tr>
+  <tr>
+    <td>Branch</td>
+    <td><input class="setting-input" name="RSCM::CVS[branch]" id="cvsbranch" type="text" value="<%= cvs.branch %>"></td>
+  </tr>
+  <tr>
+    <td>&nbsp;</td>
+    <td class="setting-description">
+      Note that you can't use trigged build if you are using DC to build multiple branches for the same project,
+      use polled builds instead.
+    </td>
+  </tr>
+</table>
+
