--- a/rscm/trunk/app/views/project/_rubyforge.rhtml
+++ b/rscm/trunk/app/views/project/_rubyforge.rhtml
@@ -2,7 +2,7 @@
 <table width="100%">
   <tr>
     <td class="setting-name">Project ID</td>
-    <td width="75%"><input class="setting-input" name="RSCM::Tracker::RubyForge[group_id]" type="text" value="<%= self.group_id %>"></td>
+    <td width="75%"><input class="setting-input" name="RSCM::Tracker::RubyForge[group_id]" type="text" value="<%= rubyforge.group_id %>"></td>
   </tr>
   <tr>
     <td>&nbsp;</td>
@@ -12,7 +12,7 @@
   </tr>
   <tr>
     <td class="setting-name">Tracker ID</td>
-    <td width="75%"><input class="setting-input" name="RSCM::Tracker::RubyForge[tracker_id]" maxlen="4" type="text" value="<%= self.tracker_id %>"></td>
+    <td width="75%"><input class="setting-input" name="RSCM::Tracker::RubyForge[tracker_id]" maxlen="4" type="text" value="<%= rubyforge.tracker_id %>"></td>
   </tr>
   <tr>
     <td>&nbsp;</td>
