--- a/rscm/trunk/app/views/project/_svn.rhtml
+++ b/rscm/trunk/app/views/project/_svn.rhtml
@@ -2,7 +2,7 @@
 <table width="100%">
   <tr>
     <td class="config_cell">Url</td>
-    <td width="75%"><input class="setting-input" name="RSCM::SVN[url]" type="text" value="<%= self.url %>"></td>
+    <td width="75%"><input class="setting-input" name="RSCM::SVN[url]" type="text" value="<%= svn.url %>"></td>
   </tr>
   <tr>
     <td>&nbsp;</td>
@@ -15,7 +15,7 @@
   </tr>
   <tr>
     <td class="config_cell">Directory</td>
-    <td><input class="setting-input" name="RSCM::SVN[path]" type="text" value="<%= self.path %>"></td>
+    <td><input class="setting-input" name="RSCM::SVN[path]" type="text" value="<%= svn.path %>"></td>
   </tr>
   <tr>
     <td>&nbsp;</td>
